<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.gchristov.sparechange.ui.activities.dashboard.DashboardActivity" />

        <variable
            name="state"
            type="com.gchristov.sparechange.ui.activities.dashboard.DashboardViewModel.State" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/savings_goals_title" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            app:onRefreshListener="@{() -> activity.refresh()}"
            app:refreshing="@{state.refreshing}">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/EmptyStateTheme"
                    android:text="@string/savings_goals_error_empty"
                    android:visibility="@{state.savingsGoals.isEmpty() ? View.VISIBLE : View.GONE}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/list_footer_spacing"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_savings_goal" />
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_margin"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/savings_goals_add"
            android:onClick="@{() -> activity.startCreateSavingsGoalFlow()}"
            android:src="@drawable/ic_add"
            android:tint="@color/white" />
    </RelativeLayout>
</layout>